--- a/BlogApplication/BlogApplication.csproj
+++ b/BlogApplication/BlogApplication.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
@@ -26,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\Files\" />
+    <Folder Include="Assets\Images\GeneralImages\" />
+    <Folder Include="Assets\Images\ProfileImages\" />
     <Folder Include="Hubs\" />
   </ItemGroup>
 
