--- a/BlogApplication/BlogApplication.csproj
+++ b/BlogApplication/BlogApplication.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
@@ -29,9 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\Files\" />
-    <Folder Include="Assets\Images\GeneralImages\" />
-    <Folder Include="Assets\Images\ProfileImages\" />
-    <Folder Include="Hubs\" />
+    <Folder Include="Assets\Images\" />
   </ItemGroup>
 
 </Project>
